--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-artifactory_contextUrl=http://localhost:8081/artifactory
+artifactory_contextUrl=http://artifactory/artifactory
 #If you use Eclipse Gradle plugin, you need to specify below credential.
 artifactory_user=admin
 artifactory_password=password
